--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   google_fonts: ^6.1.0
   websafe_svg: ^3.0.1+1
   get: ^4.6.6
+  nb_utils: ^6.1.1
+  cached_network_image: ^3.3.1
+  url_launcher: ^6.2.4
+  flutter_staggered_grid_view: ^0.4.1
+  html: ^0.15.4
 
 
 dev_dependencies:
